--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required (VERSION 2.8)
 project (libir)
 include_directories("include")
 
-#SET(CMAKE_C_COMPILER avr-gcc)
+SET(CMAKE_C_COMPILER avr-gcc)
 #SET(CMAKE_CXX_COMPILER avr-gcc)
 
 #set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall")
@@ -11,6 +11,6 @@ set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -ggdb3")
 
 add_library(ir STATIC src/ir.c)
 
-add_executable(main libir.a test/main.c)
+add_executable(main test/main.c)
 target_link_libraries(main ir)
 
